--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_BACKEND_URL= http://localhost:5000
+//REACT_APP_BACKEND_URL= http://localhost:5000
 
+REACT_APP_BACKEND_URL=https://realtime-tp1y.onrender.com
